[project]
name = "claude-office-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "defusedxml>=0.7.1",
    "lxml>=4.9.0",
    "markitdown[docx]>=0.0.1a2",
    "openpyxl>=3.1.0",
    "pdf2image>=1.16.0",
    "pillow>=10.0.0",
    "pypdf>=3.17.0",
    "python-docx>=1.2.0",
    "python-pptx>=0.6.21",
    "six>=1.16.0",
]
